Commit 2: Entidades base User, Tenant e Role enum com UserDetails